# HippOS

./: CMakeLists.txt  README.md
cmake/: i686-elf-toolchain.cmake
scripts/: boot.sh
src/: boot.asm  boot.s  kernel_main.c
